--- a/index.html
+++ b/index.html
@@ -1226,30 +1226,75 @@ aside.panel{
 <section id="kits" class="wrap">
   <div class="section__head">
     <h2 class="section__title">Starter Kits</h2>
-    <span class="pill">Fast path in</span>
+    <span class="pill">One frame. Your loadout.</span>
   </div>
+
+  <p class="lede" style="margin-bottom:16px;max-width:800px">
+    Every CoreFlux Simpit is modular. Add racing controls, HOTAS, pedals, triples/quad screens, camera arms,
+    streaming deck, even motion actuation. Start lean or go full send. This is not “a cockpit.”
+    This is your command seat.
+  </p>
+
   <div class="cards">
+    <!-- ALL-IN-ONE -->
+    <article class="card" style="border:1px solid rgba(0,198,255,.5);box-shadow:0 24px 60px rgba(0,198,255,.25),0 0 60px rgba(0,198,255,.18)">
+      <h3>All-In-One Simpit</h3>
+      <p class="lede">Workstation • FPS • Racing • Flight • Stream • Motion-ready.</p>
+      <p>
+        Dynamic chassis with actuator hardpoints, direct-drive wheel mount, loadcell pedal tray,
+        dual-stick / HOTAS / throttle rails, shifter & handbrake plate, Stream Deck + camera/light arms,
+        and triple+overhead monitor stack with Tobii eye-tracking sightline.
+      </p>
+      <p><strong>Why:</strong> One rig that replaces your desk, race cockpit, flight pit, and streaming setup —
+      and can take motion actuators (Qubic System style telemetry-based surge / heave cues) without twisting.</p>
+      <p style="font-size:.75rem;line-height:1.4;color:var(--muted);font-weight:500">
+        This is the “I do everything” build. Sit down, pick mode, go.
+      </p>
+    </article>
+
+    <!-- Work + FPS -->
     <article class="card">
       <h3>Work + FPS</h3>
-      <p class="lede">Single monitor, low-latency posture.</p>
-      <p>Static chassis + desk tray + single/dual-stick as needed. Clean camera angle for streaming/meetings.</p>
+      <p class="lede">Tuned for mouse control and aim stability.</p>
+      <p>
+        Static chassis + keyboard/mouse tray + single or dual-stick mounts. Camera and mic arms for calls/stream.
+        Zero desk wobble, cables managed.
+      </p>
+      <p><strong>Why:</strong> Office by day, tac shooter at night, no rebuild and no “gaming desk” flex.
+      </p>
     </article>
+
+    <!-- Race Spec -->
     <article class="card">
       <h3>Race Spec</h3>
-      <p class="lede">Direct-drive + loadcell + triples/quad.</p>
-      <p>Dynamic chassis, indexed pedal mount, wheel arm, shifter/handbrake. Ready for traction loss actuators.</p>
+      <p class="lede">Direct-drive torque. Loadcell brake. Triple wrap.</p>
+      <p>
+        Dynamic chassis, indexed pedal mount, reinforced DD wheel arm (Simucube / Fanatec / Moza / Simagic),
+        shifter / handbrake plate, plus triple or triple+HUD screens mounted to the frame.
+      </p>
+      <p><strong>Why:</strong> Repeatable seating geometry, no pedal walk, motion-capable later.
+      </p>
     </article>
+
+    <!-- Flight / Space -->
     <article class="card">
       <h3>Flight / Space</h3>
-      <p class="lede">Center-stick, dual-stick, or HOTAS.</p>
-      <p>Dynamic chassis with overhead HUD and pedal base for planted yaw. Tuned for MSFS, DCS, X-Plane, Star Citizen.</p>
+      <p class="lede">HOTAS, dual-stick, or center-stick — your airframe, your posture.</p>
+      <p>
+        Dynamic chassis with center-stick or dual-stick arms, throttle rails, adjustable rudder pedal base,
+        overhead HUD / quad screen arc, and Tobii-ready line-of-sight for head/eye tracking.
+      </p>
+      <p><strong>Why:</strong> DCS, MSFS, Star Citizen with believable reach and zero cable mess.
+      </p>
     </article>
   </div>
+
   <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:16px">
-    <a href="#reserve" class="btn btn--primary">Build Mine</a>
-    <a href="#quickstart" class="btn btn--ghost">Game Tuning</a>
+    <a href="#reserve" class="btn btn--primary">Spec My All-In-One Simpit</a>
+    <a href="#reserve" class="btn btn--ghost">Reserve Pilot Batch</a>
   </div>
 </section>
+
 
 <!-- CONFIGURATOR -->
 <section id="configurator" class="wrap">
