--- a/index.html
+++ b/index.html
@@ -282,7 +282,6 @@
   }
   .footer-note{font-size:.7rem;line-height:1.4;color:var(--muted);max-width:600px;margin:12px auto 0;font-weight:500}
 
-  /* configurator */
   #moduleList{display:grid;gap:24px;align-content:start}
   .group-head{display:flex;flex-direction:column;gap:6px}
   .group-head h3{margin:0;font-size:1rem;font-weight:700;line-height:1.3;color:var(--text)}
@@ -694,33 +693,32 @@
   </div>
 </section>
 
-<!-- CONFIGURATOR: MULTI-SELECT VERSION -->
 <section id="configurator" class="wrap">
   <div class="section__head">
     <h2 class="section__title">Configurator</h2>
-    <span class="pill">Multi-select enabled</span>
+    <span class="pill">Live total · Real modules</span>
   </div>
   <p class="lede">
-    You can now tick more than one in a group — triples + quad, racing + flight, stream + motion. If you pick something that needs Dynamic, we’ll auto pick Dynamic for you.
+    Step 1: choose Static or Dynamic base. Step 2: bolt on what you run. Total updates live.
+    Typical Static builds land around $1.8k–$2.5k. Dynamic motion-ready builds land around $2.8k–$3.6k before actuators.
   </p>
 
   <div style="display:grid;grid-template-columns:2fr 1fr;gap:30px;align-items:start;margin-top:24px">
     <div id="moduleList">
-      <!-- CORE -->
       <div class="config-group config-group--core">
         <div class="group-head" style="grid-column:1/-1">
           <h3>Core System</h3>
-          <p class="lede">Pick Static, Dynamic, or both (we’ll clean it up in the summary).</p>
+          <p class="lede">This is the chassis. Everything mounts to this geometry.</p>
         </div>
 
-        <label class="config-card" data-key="base-static">
-          <input type="checkbox" data-price="1000" data-label="STATIC BASE FRAME">
+        <label class="config-card" data-group="baseframe" data-key="base-static">
+          <input type="radio" name="baseframe" data-price="1000" data-label="STATIC BASE FRAME">
           <strong>STATIC BASE FRAME — $1,000</strong>
           <p>Motionless, silent platform. Apartment / shared-wall friendly.</p>
         </label>
 
-        <label class="config-card" data-key="base-dynamic">
-          <input type="checkbox" data-price="1450" data-label="DYNAMIC BASE FRAME" checked>
+        <label class="config-card" data-group="baseframe" data-key="base-dynamic">
+          <input type="radio" name="baseframe" data-price="1450" data-label="DYNAMIC BASE FRAME" checked>
           <strong>DYNAMIC BASE FRAME — $1,450</strong>
           <p>Reinforced, actuator-ready. Braced for surge / heave / traction loss.</p>
         </label>
@@ -750,35 +748,33 @@
         </label>
       </div>
 
-      <!-- MONITOR: now multi-select -->
       <div class="config-group config-group--monitor">
         <div class="group-head" style="grid-column:1/-1">
           <h3>Monitor System</h3>
-          <p class="lede">Tick one, two, or all — some pilots run triples + overhead.</p>
+          <p class="lede">Pick your viewport. Re-arm later anytime.</p>
         </div>
 
-        <label class="config-card" data-key="mon-single">
-          <input type="checkbox" data-price="150" data-label="SINGLE MONITOR ARM">
+        <label class="config-card" data-group="monitor" data-key="single">
+          <input type="radio" name="monitor" data-price="150" data-label="SINGLE MONITOR ARM">
           <strong>SINGLE MONITOR ARM — $150</strong>
           <p>One display arm (24–34″). Ideal for workstation / FPS.</p>
         </label>
-        <label class="config-card" data-key="mon-triple">
-          <input type="checkbox" data-price="400" data-label="TRIPLE MONITOR ARM">
+        <label class="config-card" data-group="monitor" data-key="triple">
+          <input type="radio" name="monitor" data-price="400" data-label="TRIPLE MONITOR ARM">
           <strong>TRIPLE MONITOR ARM — $400</strong>
           <p>Three-arm racing/flight wrap.</p>
         </label>
-        <label class="config-card" data-key="mon-quad">
-          <input type="checkbox" data-price="450" data-label="QUAD MONITOR SETUP">
+        <label class="config-card" data-group="monitor" data-key="quad">
+          <input type="radio" name="monitor" data-price="450" data-label="QUAD MONITOR SETUP">
           <strong>QUAD MONITOR SETUP — $450</strong>
           <p>Triple horizon + overhead HUD/telemetry/chat.</p>
         </label>
       </div>
 
-      <!-- FLIGHT -->
       <div class="config-group config-group--flight">
         <div class="group-head" style="grid-column:1/-1">
           <h3>Flight Controls</h3>
-          <p class="lede">HOTAS / dual-stick / pedals — tick what you fly.</p>
+          <p class="lede">HOTAS / dual-stick / throttle. Repeatable reach every time.</p>
         </div>
 
         <label class="config-card" data-key="flight-single">
@@ -803,15 +799,14 @@
           <input type="checkbox" data-price="380" data-label="FLIGHT: ACTUATOR MOUNT KIT" data-requires="dynamic">
           <strong>FLIGHT: ACTUATOR MOUNT KIT — $380</strong>
           <p>Hardpoints + reinforcement plates for Qubic-style kits.</p>
-          <div class="req-note">Requires Dynamic Base Frame. We’ll tick it.</div>
+          <div class="req-note">Requires Dynamic Base Frame.</div>
         </label>
       </div>
 
-      <!-- RACING -->
       <div class="config-group config-group--racing">
         <div class="group-head" style="grid-column:1/-1">
           <h3>Racing Controls</h3>
-          <p class="lede">Wheel, pedals, shifter — all can be on.</p>
+          <p class="lede">Steering, pedals, shifting — under real torque.</p>
         </div>
 
         <label class="config-card" data-key="race-wheel">
@@ -836,15 +831,14 @@
           <input type="checkbox" data-price="420" data-label="RACING: ACTUATOR MOUNT KIT" data-requires="dynamic">
           <strong>RACING: ACTUATOR MOUNT KIT — $420</strong>
           <p>Actuator crossmembers + gussets to carry surge/heave.</p>
-          <div class="req-note">Requires Dynamic Base Frame. We’ll tick it.</div>
+          <div class="req-note">Requires Dynamic Base Frame.</div>
         </label>
       </div>
 
-      <!-- CREATOR -->
       <div class="config-group config-group--stream">
         <div class="group-head" style="grid-column:1/-1">
           <h3>Creator / Stream Setup</h3>
-          <p class="lede">For your stream layout.</p>
+          <p class="lede">Camera, lighting, Stream Deck — frame mounted.</p>
         </div>
         <label class="config-card" data-key="stream-cam">
           <input type="checkbox" data-price="100" data-label="STREAM: CAMERA ARM">
@@ -870,7 +864,7 @@
       <p id="selectedCount" class="lede">0 modules selected</p>
       <h2 id="totalPrice" style="margin:10px 0;font-size:1.8rem">$1450</h2>
       <div style="font-size:.75rem;line-height:1.4;font-weight:600;color:var(--muted);margin-bottom:12px">
-        If you add actuator kits, we force Dynamic so the rig isn’t broken.
+        Static = planted and quiet. Dynamic = actuator-ready, braced for motion. You can upgrade Static later.
       </div>
       <a href="#reserve" class="btn btn--primary" style="width:100%;justify-content:center">Reserve My Slot</a>
     </aside>
@@ -1216,6 +1210,7 @@
 <script>
 document.getElementById('year').textContent = new Date().getFullYear();
 
+/* ---------- Hero carousel ---------- */
 document.addEventListener('DOMContentLoaded', ()=>{
   const slides=[...document.querySelectorAll('.mock__slide')];
   const dots=[...document.querySelectorAll('.dot')];
@@ -1231,7 +1226,8 @@ document.addEventListener('DOMContentLoaded', ()=>{
   function play(){ timer=setInterval(()=>show(i+1), 5200); }
   function stop(){ clearInterval(timer); }
 
-  dots.forEach((d,idx)=>d.addEventListener('click',()=>{
+  dots.forEach((d,idx)=>d.addEventListener('click',(e)=>{
+    e.stopPropagation();
     stop(); show(idx); play();
   }));
 
@@ -1250,20 +1246,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
   play();
 });
 
-(function(){
-  const glow = document.getElementById('mockGlow');
-  if(!glow) return;
-  window.addEventListener('pointermove', e=>{
-    const rect = glow.getBoundingClientRect();
-    const cx = rect.left + rect.width/2, cy = rect.top + rect.height/2;
-    const dx = (e.clientX - cx) / rect.width;
-    const dy = (e.clientY - cy) / rect.height;
-    glow.style.setProperty('--gx', (50 + dx*10)+'%');
-    glow.style.setProperty('--gy', (50 + dy*10)+'%');
-  });
-})();
-
-/* MULTI-SELECT CONFIGURATOR LOGIC */
+/* ---------- Configurator (fixed) ---------- */
 (function(){
   const root = document.getElementById('moduleList');
   if(!root) return;
@@ -1272,13 +1255,20 @@ document.addEventListener('DOMContentLoaded', ()=>{
   const countEl = document.getElementById('selectedCount');
   const linesEl = document.getElementById('buildLines');
 
+  // find radio groups
+  const radioGroups = Array.from(new Set(
+    [...root.querySelectorAll('input[type="radio"][name]')].map(i=>i.name)
+  ));
+
   function parsePrice(input){
-    if (input.dataset.price) return Number(input.dataset.price) || 0;
     const card = input.closest('.config-card');
     const strong = card ? card.querySelector('strong') : null;
     const src = (strong ? strong.textContent : '') || '';
-    const m = src.match(/\$\s*([\d,]+)/);
-    return m ? Number(m[1].replace(/,/g,'')) : 0;
+    const matches = [...src.matchAll(/\$\s*([\d][\d,\s]*(?:\.\d+)?)/g)];
+    if(!matches.length) return 0;
+    const raw = matches[matches.length - 1][1].replace(/[,\s]/g,'');
+    const n = Number(raw);
+    return isNaN(n) ? 0 : n;
   }
 
   function labelFor(input){
@@ -1286,73 +1276,120 @@ document.addEventListener('DOMContentLoaded', ()=>{
     const card = input.closest('.config-card');
     const strong = card ? card.querySelector('strong') : null;
     if (strong) return strong.textContent.replace(/\s*[–—-]\s*\$.*$/,'').trim();
-    return 'Item';
+    return input.name || 'Item';
   }
 
-  function hasDynamic(){
-    const dyn = root.querySelector('[data-key="base-dynamic"] input');
+  function isDynamic(){
+    const dyn = root.querySelector('input[name="baseframe"][data-label="DYNAMIC BASE FRAME"]');
     return dyn && dyn.checked;
   }
 
-  function ensureDynamic(){
-    const dyn = root.querySelector('[data-key="base-dynamic"] input');
-    if (dyn){
-      dyn.checked = true;
-      // optional: if both static and dynamic end up checked, leave it — user said multi is ok
+  function updateDynamicLocks(){
+    const cards = root.querySelectorAll('.requires-dynamic');
+    const dynamic = isDynamic();
+    cards.forEach(card=>{
+      const input = card.querySelector('input');
+      if(dynamic){
+        card.classList.remove('locked');
+        input.disabled = false;
+      } else {
+        card.classList.add('locked');
+        input.checked = false;
+        input.disabled = true;
+      }
+    });
+  }
+
+  function selectedRadios(){
+    const sel=[];
+    for(const g of radioGroups){
+      const r = root.querySelector(`input[type="radio"][name="${g}"]:checked`);
+      if(r) sel.push(r);
     }
+    return sel;
   }
 
   function recalc(){
     let total = 0;
     const picked = [];
-    root.querySelectorAll('.config-card input[type="checkbox"]').forEach(ch=>{
-      if (ch.checked){
-        const price = parsePrice(ch);
-        const label = labelFor(ch);
-        total += price;
-        picked.push(label + ' — $' + price);
+
+    // checkboxes
+    root.querySelectorAll('input[type="checkbox"]').forEach(ch=>{
+      if(ch.disabled) return;
+      if(ch.checked){
+        const p = parsePrice(ch);
+        total += p;
+        picked.push(`${labelFor(ch)} — $${p}`);
       }
     });
-    if (linesEl){
+
+    // radios
+    selectedRadios().forEach(r=>{
+      const p = parsePrice(r);
+      total += p;
+      picked.push(`${labelFor(r)} — $${p}`);
+    });
+
+    if(linesEl){
       linesEl.innerHTML = picked.map(t=>`<li style="padding:6px 0;border-bottom:1px solid var(--border)">${t}</li>`).join('');
     }
-    if (countEl){
+    if(countEl){
       countEl.textContent = `${picked.length} module${picked.length===1?'':'s'} selected`;
     }
-    if (totalEl){
-      totalEl.textContent = '$' + total;
+    if(totalEl){
+      totalEl.textContent = `$${total}`;
     }
   }
 
+  // main click handler for cards
   root.querySelectorAll('.config-card').forEach(card=>{
-    card.addEventListener('click', (e)=>{
+    card.addEventListener('click',(e)=>{
+      e.preventDefault(); // stop default label double-toggle
       const input = card.querySelector('input');
-      if (!input) return;
+      if(!input) return;
 
-      // if this item needs dynamic and it's not on, force it
-      if (card.classList.contains('requires-dynamic') && !hasDynamic()){
-        ensureDynamic();
+      // if this one needs dynamic and user is on static, auto-switch to dynamic
+      if(card.classList.contains('requires-dynamic') && !isDynamic()){
+        const dyn = root.querySelector('input[name="baseframe"][data-label="DYNAMIC BASE FRAME"]');
+        if(dyn){
+          dyn.checked = true;
+        }
       }
 
-      // toggle this item
-      if (e.target !== input){
+      updateDynamicLocks();
+
+      // if after update it's disabled, don't go further
+      if(input.disabled) {
+        recalc();
+        return;
+      }
+
+      if(input.type === 'checkbox'){
         input.checked = !input.checked;
+      } else if (input.type === 'radio'){
+        input.checked = true;
       }
 
       recalc();
     });
   });
 
-  // init prices/labels
-  root.querySelectorAll('input[type="checkbox"]').forEach(i=>{
+  // normal change events (in case someone focuses + space presses)
+  root.querySelectorAll('input').forEach(i=>{
     const p = parsePrice(i);
-    if (p>0) i.dataset.price = String(p);
-    if (!i.dataset.label) i.dataset.label = labelFor(i);
+    if(p>0) i.dataset.price = String(p);
+    if(!i.dataset.label) i.dataset.label = labelFor(i);
+    i.addEventListener('change', ()=>{
+      updateDynamicLocks();
+      recalc();
+    });
   });
 
+  updateDynamicLocks();
   recalc();
 })();
 
+/* ---------- Sticky CTA ---------- */
 (function(){
   const cta = document.getElementById('stickyCTA');
   const hero = document.querySelector('.hero');
@@ -1365,6 +1402,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
   io.observe(hero);
 })();
 
+/* ---------- Reserve form ---------- */
 (function(){
   const email  = document.getElementById('rEmail');
   const region = document.getElementById('rRegion');
@@ -1410,6 +1448,7 @@ Setup notes / hardware (optional):
   });
 })();
 
+/* ---------- AI canvas bg ---------- */
 (function(){
   const c = document.getElementById('aiCanvas');
   if(!c) return;
@@ -1494,6 +1533,7 @@ Setup notes / hardware (optional):
   requestAnimationFrame(tick);
 })();
 
+/* ---------- JSON-LD ---------- */
 (function(){
   const schema = {
     "@context":"https://schema.org",
