--- a/index.html
+++ b/index.html
@@ -1166,6 +1166,66 @@
     </div>
   </div>
 </section>
+  <section class="wrap" id="phoenix-primus">
+  <div class="section__head">
+    <h2 class="section__title">Phoenix Primus — FIGHT3RPHOENIX Build Sheet</h2>
+    <span class="pill">Real, streamed, dialed</span>
+  </div>
+
+  <div class="panel" style="display:grid;grid-template-columns:1.3fr .7fr;gap:20px;align-items:flex-start">
+    <div>
+      <p>
+        This is not a fantasy spec. This is the actual Star Citizen rig FIGHT3RPHOENIX runs and streams — tuned for cockpit visibility,
+        SC PvP ergonomics, and clean camera/light framing.
+      </p>
+
+      <h3 style="margin-top:14px;font-size:.85rem;text-transform:uppercase;letter-spacing:.04em;color:var(--accent)">Display Stack</h3>
+      <ul style="margin:6px 0 0 16px;color:var(--muted);font-size:.8rem;line-height:1.45">
+        <li>Static CoreFlux rig, center monitor arm</li>
+        <li><strong>3 × 34″ AOC 1ms gaming panels</strong> in a 1000R arc (main cockpit wrap)</li>
+        <li><strong>Dell 32″ hub monitor</strong> as overhead/top for maps, stream tools, chat</li>
+        <li><strong>Tobii Eye Tracker 5</strong> mounted under the center panel</li>
+      </ul>
+
+      <h3 style="margin-top:14px;font-size:.85rem;text-transform:uppercase;letter-spacing:.04em;color:var(--accent)">Controls / Stream</h3>
+      <ul style="margin:6px 0 0 16px;color:var(--muted);font-size:.8rem;line-height:1.45">
+        <li><strong>Dual Virpil Constellation Alphas</strong> (true SC dual-stick)</li>
+        <li><strong>VPC MongoosT-50CM2 throttle</strong></li>
+        <li><strong>VPC Control Panel 1 add-on</strong> for quick ship / systems changes</li>
+        <li><strong>No pedals</strong> — he doesn’t like pedals for Star Citizen, so cockpit clears the floor</li>
+        <li><strong>2 × Elgato Key Lights</strong> frame-mounted for stable lighting</li>
+        <li><strong>Elgato Stream Deck</strong> in reach, mounted, not loose on desk</li>
+        <li><strong>Canon EOS streaming camera</strong> on a rigid arm = no wobble on stick input</li>
+      </ul>
+
+      <h3 style="margin-top:14px;font-size:.85rem;text-transform:uppercase;letter-spacing:.04em;color:var(--accent)">PC / Performance</h3>
+      <ul style="margin:6px 0 0 16px;color:var(--muted);font-size:.8rem;line-height:1.45">
+        <li><strong>CPU:</strong> AMD Ryzen 9 7950X3D</li>
+        <li><strong>RAM:</strong> 64 GB Corsair Vengeance 6000 MHz</li>
+        <li><strong>Motherboard:</strong> X670E Aorus Master</li>
+        <li><strong>Storage:</strong> high-end NVMe M.2 (for SC load/asset streaming)</li>
+        <li><strong>GPU:</strong> Radeon RX 7900 XTX driving 4 screens</li>
+        <li><strong>Star Citizen perf:</strong> ±80 FPS @ <strong>10 320 × 1 440</strong> (ultra-wide quad layout)</li>
+      </ul>
+    </div>
+
+    <div class="panel" style="background:rgba(0,0,0,.25);border:1px solid rgba(0,198,255,.25);box-shadow:0 22px 50px rgba(0,0,0,.45)">
+      <h3 style="margin-top:0;font-size:.85rem">Phoenix Primus = what to tick</h3>
+      <ul style="margin:6px 0 0 16px;color:var(--muted);font-size:.78rem;line-height:1.45">
+        <li><strong>Base:</strong> Static (he’s on Static)</li>
+        <li><strong>Monitor:</strong> Quad monitor setup</li>
+        <li><strong>Flight:</strong> Dual Stick + Throttle</li>
+        <li><strong>Stream:</strong> Camera arm + 2 × key light arms + Stream Deck arm</li>
+        <li><strong>Extras:</strong> Tobii mount under center screen</li>
+        <li><strong>Pedals:</strong> leave off (SC preference)</li>
+      </ul>
+      <p style="margin-top:10px;font-size:.7rem;color:var(--text);line-height:1.4">
+        If you want headroom for motion later, flip the base to <strong>Dynamic</strong>. Geometry stays the same.
+      </p>
+    </div>
+  </div>
+</section>
+
 
 <section id="faq" class="wrap">
   <div class="section__head">
