--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   <!-- preload -->
   <link rel="preload" as="image" href="assets/images/frame-left.png" />
   <link rel="preload" as="image" href="assets/images/frame-right.png" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" as="style" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet" />
 
   <style>
   :root{
@@ -309,6 +309,7 @@
 
   aside.panel{position:sticky;top:100px;padding:20px}
 
+  /* responsive */
   @media (max-width:1080px){
     .hero{grid-template-columns:1fr}
     .mock{height:400px;max-height:400px}
@@ -871,6 +872,23 @@
   </div>
 </section>
 
+<!-- tiny tutorial / how-to for configurator -->
+<section class="wrap" id="config-howto">
+  <div class="panel" style="display:grid;gap:10px;">
+    <h2 style="margin:0;font-size:1rem;">How to use the configurator</h2>
+    <p style="margin:0;font-size:.8rem;color:var(--muted);">
+      1) Click the <strong>base frame</strong> first (Static if you want silent / planted, Dynamic if you want motion later).<br>
+      2) Pick your <strong>monitor layout</strong> — single, triple, or quad.<br>
+      3) Add your <strong>control group</strong> (flight, racing, or creator). You can stack more than one.<br>
+      4) Watch the <strong>right-hand panel</strong> — it totals everything.<br>
+      5) Hit <strong>Reserve</strong> and tell us your motion kit / bolt pattern and we cut plates to suit.
+    </p>
+    <p style="margin:0;font-size:.75rem;color:var(--muted);">
+      If you click a motion-only item while on Static, we auto-switch you to Dynamic so you don’t end up with the wrong chassis.
+    </p>
+  </div>
+</section>
+
 <section id="games" class="wrap">
   <div class="section__head">
     <h2 class="section__title">Games & Sims</h2>
@@ -918,7 +936,8 @@
         This is the same rig he currently flies and streams on.
       </p>
       <p>
-        Seat, HOTAS/dual-stick, pedal base, cam/mic arms and stream displays are all on repeatable geometry, so he can go live without rebuilding the cockpit.
+        Seat, dual-stick/HOTAS, pedal base (kept clear for his SC style), cam/mic arms and stream displays are all on repeatable geometry,
+        so he can go live without rebuilding the cockpit.
       </p>
       <p style="margin-top:8px">
         Watch him live:
@@ -940,7 +959,7 @@
     <ul style="flex:1 1 220px;min-width:200px;margin:0;padding-left:16px;color:var(--muted);font-size:.85rem;line-height:1.5">
       <li>HOTAS ↔ dual-stick swap in minutes</li>
       <li>Frame-mounted camera/mic — no wobble on stream</li>
-      <li>Pedals on braced base, cable run out of frame</li>
+      <li>Quad monitor stack inside cockpit reach</li>
       <li>Stream display mount within hand reach</li>
       <li>Apartment-safe — no wall drilling</li>
     </ul>
@@ -1062,10 +1081,10 @@
   <div class="cards" style="margin-top:14px">
     <article class="card">
       <h3>Star Citizen</h3>
-      <p class="lede">Dual-stick or HOTAS + pedals.</p>
+      <p class="lede">Dual-stick or HOTAS + Tobii.</p>
       <ol>
         <li>Chassis: Dynamic.</li>
-        <li>Loadout: <strong>Flight</strong> → Dual Stick / Stick + Throttle, Flight Pedal Mount, Quad Monitor Setup.</li>
+        <li>Loadout: <strong>Flight</strong> → Dual Stick / Stick + Throttle, Flight Pedal Mount (optional for SC), Quad Monitor Setup.</li>
         <li>Add: Flight Actuator Kit for motion cues.</li>
       </ol>
     </article>
@@ -1166,7 +1185,8 @@
     </div>
   </div>
 </section>
-  <section class="wrap" id="phoenix-primus">
+
+<section class="wrap" id="phoenix-primus">
   <div class="section__head">
     <h2 class="section__title">Phoenix Primus — FIGHT3RPHOENIX Build Sheet</h2>
     <span class="pill">Real, streamed, dialed</span>
@@ -1182,7 +1202,7 @@
       <h3 style="margin-top:14px;font-size:.85rem;text-transform:uppercase;letter-spacing:.04em;color:var(--accent)">Display Stack</h3>
       <ul style="margin:6px 0 0 16px;color:var(--muted);font-size:.8rem;line-height:1.45">
         <li>Static CoreFlux rig, center monitor arm</li>
-        <li><strong>3 × 34″ AOC 1ms gaming panels</strong> in a 1000R arc (main cockpit wrap)</li>
+        <li><strong>3 × 34″ AOC 1 ms gaming panels</strong> in a 1000R arc (main cockpit wrap)</li>
         <li><strong>Dell 32″ hub monitor</strong> as overhead/top for maps, stream tools, chat</li>
         <li><strong>Tobii Eye Tracker 5</strong> mounted under the center panel</li>
       </ul>
@@ -1201,11 +1221,11 @@
       <h3 style="margin-top:14px;font-size:.85rem;text-transform:uppercase;letter-spacing:.04em;color:var(--accent)">PC / Performance</h3>
       <ul style="margin:6px 0 0 16px;color:var(--muted);font-size:.8rem;line-height:1.45">
         <li><strong>CPU:</strong> AMD Ryzen 9 7950X3D</li>
-        <li><strong>RAM:</strong> 64 GB Corsair Vengeance 6000 MHz</li>
-        <li><strong>Motherboard:</strong> X670E Aorus Master</li>
-        <li><strong>Storage:</strong> high-end NVMe M.2 (for SC load/asset streaming)</li>
-        <li><strong>GPU:</strong> Radeon RX 7900 XTX driving 4 screens</li>
-        <li><strong>Star Citizen perf:</strong> ±80 FPS @ <strong>10 320 × 1 440</strong> (ultra-wide quad layout)</li>
+        <li><strong>Memory:</strong> 64 GB Corsair Vengeance DDR5 6000</li>
+        <li><strong>Motherboard:</strong> Gigabyte X670E Aorus Master</li>
+        <li><strong>Storage:</strong> High-end NVMe M.2 for Star Citizen asset streaming</li>
+        <li><strong>GPU:</strong> AMD Radeon RX 7900 XTX driving 4 displays</li>
+        <li><strong>Star Citizen perf:</strong> ±80 FPS @ <strong>10 320 × 1 440</strong> (quad ultra-wide layout)</li>
       </ul>
     </div>
 
@@ -1217,7 +1237,7 @@
         <li><strong>Flight:</strong> Dual Stick + Throttle</li>
         <li><strong>Stream:</strong> Camera arm + 2 × key light arms + Stream Deck arm</li>
         <li><strong>Extras:</strong> Tobii mount under center screen</li>
-        <li><strong>Pedals:</strong> leave off (SC preference)</li>
+        <li><strong>Pedals:</strong> leave off — SC PvP, dual-stick focus</li>
       </ul>
       <p style="margin-top:10px;font-size:.7rem;color:var(--text);line-height:1.4">
         If you want headroom for motion later, flip the base to <strong>Dynamic</strong>. Geometry stays the same.
@@ -1225,7 +1245,6 @@
     </div>
   </div>
 </section>
-
 
 <section id="faq" class="wrap">
   <div class="section__head">
@@ -1363,7 +1382,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
   function selectedRadios(){
     const sel=[];
     for(const g of radioGroups){
-      const r = root.querySelector(`input[type="radio"][name="${g}"]:checked`);
+      const r = root.querySelector(\`input[type="radio"][name="\${g}"]:checked\`);
       if(r) sel.push(r);
     }
     return sel;
@@ -1379,7 +1398,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
       if(ch.checked){
         const p = parsePrice(ch);
         total += p;
-        picked.push(`${labelFor(ch)} — $${p}`);
+        picked.push(\`\${labelFor(ch)} — $\${p}\`);
       }
     });
 
@@ -1387,17 +1406,17 @@ document.addEventListener('DOMContentLoaded', ()=>{
     selectedRadios().forEach(r=>{
       const p = parsePrice(r);
       total += p;
-      picked.push(`${labelFor(r)} — $${p}`);
+      picked.push(\`\${labelFor(r)} — $\${p}\`);
     });
 
     if(linesEl){
-      linesEl.innerHTML = picked.map(t=>`<li style="padding:6px 0;border-bottom:1px solid var(--border)">${t}</li>`).join('');
+      linesEl.innerHTML = picked.map(t=>\`<li style="padding:6px 0;border-bottom:1px solid var(--border)">\${t}</li>\`).join('');
     }
     if(countEl){
-      countEl.textContent = `${picked.length} module${picked.length===1?'':'s'} selected`;
+      countEl.textContent = \`\${picked.length} module\${picked.length===1?'':'s'} selected\`;
     }
     if(totalEl){
-      totalEl.textContent = `$${total}`;
+      totalEl.textContent = \`$\${total}\`;
     }
   }
 
@@ -1489,19 +1508,19 @@ document.addEventListener('DOMContentLoaded', ()=>{
 
     const subject = encodeURIComponent("CoreFlux Simpits Pilot Batch Reservation");
     const body = encodeURIComponent(
-`Email: ${e}
-Region: ${rg}
-Primary Mode: ${md}
+\`Email: \${e}
+Region: \${rg}
+Primary Mode: \${md}
 
 Setup notes / hardware (optional):
 - Wheel base / HOTAS / pedals:
 - Triple / quad / VR:
 - Static or Dynamic interest:
 - Motion / actuator interest (Qubic, D-Box etc.):
-- Anything we should know:`
+- Anything we should know:\`
     );
     const dest = "sales@coreflux.co.za";
-    window.location.href = `mailto:${dest}?subject=${subject}&body=${body}`;
+    window.location.href = \`mailto:\${dest}?subject=\${subject}&body=\${body}\`;
 
     note.textContent="Locked. We'll reach out with pilot batch details.";
     note.style.color="var(--text)";
