--- a/index.html
+++ b/index.html
@@ -888,6 +888,25 @@
   </div>
 </section>
 
+  <section id="shipping-info" class="wrap">
+  <div class="section__head">
+    <h2 class="section__title">Shipping & Duties (International)</h2>
+    <span class="pill">Important cost and delivery info</span>
+  </div>
+  <p class="lede">
+    Rigs ship from Johannesburg, South Africa. International freight, local UK delivery, and any import VAT/duties are <strong>not included</strong> in the price shown above.
+  </p>
+  <p class="lede">
+    For UK buyers, typical air freight for one fully boxed rig is approximately <strong>£450–£700</strong> delivered door-to-door, with transit times of approximately <strong>5–10 days</strong>, depending on postcode, service level, and import formalities.
+  </p>
+  <p class="lede">
+    Sea freight (LCL) is available for larger orders or bulk shipments — expect transit times around <strong>3-6 weeks</strong>, and unit cost will vary accordingly.
+  </p>
+  <p class="lede">
+    For a detailed quote, please contact us with your destination postcode, build choice, and preferred delivery timeline.
+  </p>
+</section>
+
 <section id="games" class="wrap">
   <div class="section__head">
     <h2 class="section__title">Games & Sims</h2>
